# owledge

./: .gitignore  AGENTS.md  AGENTS.template.md  CHANGELOG.md  CLAUDE.md  CLAUDE.template.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  MANIFEST.in  OWLEDGE.template.md  PRIVACY.md  PROJECT_CONTEXT.md  PROJECT_CONTEXT.template.md  README.md  REPORT_DESIGN_SELECTOR.html  REVIEW.md  ROADMAP.md  SECURITY.md  SUPPORT.md  USER_CONTEXT.template.md  pyproject.toml  pytest.ini
.agent-control/: README.md  config.example.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
addons/benchmark-kit/: BENCHMARK_EXPLAINED.md  README.md  addon.json
addons/compliance-light/: README.md  addon.json
addons/cross-project-hub-kit/: addon.json
addons/decision-trace-kit/: README.md  addon.json
addons/enterprise-context-benchmark-kit/: README.md  addon.json
addons/launch-demo-kit/: README.md  addon.json
addons/pi-proof-kit/: README.md  addon.json
addons/pilot-benchmark-kit/: README.md  addon.json
addons/poweruser-positioning-kit/: README.md  addon.json
addons/project-snapshot-kit/: README.md  addon.json
addons/runtime-conformance-kit/: README.md  addon.json
addons/swarm-coordination-kit/: README.md  addon.json
addons/trust-readiness-kit/: README.md  addon.json
addons/ts-adapter-kit/: README.md  addon.json  package.json  tsconfig.json
agent-memory/: README.md
agent-memory/compiled/: project-story-snapshot.md
agent-memory/decision-trace/: poweruser-proof-decision.md  poweruser-proof-goal.md  poweruser-proof-task.md
agent-memory/schemas/: canonical-memory.schema.json  edge.schema.json  graphrag-edge.schema.json  promotion.schema.json  rag-document.schema.json  task-card.schema.json  workpackage.schema.json
agent-memory/templates/: agent-session-template.md  canonical-memory-template.md  idea-card-template.md  personal-pattern-template.md  rag-export-manifest-template.json  review-to-task-plan-template.md
assets/: README.md
benchmarks/: README.md  run_benchmarks.py
benchmarks/results/: README.md  baseline.json
benchmarks/v0.7.0/: README.md  benchmark-explained.md  methodology.md
contracts/: release-surface.json
docs/: README.md  agent-first-run-setup.md  agent-integration-guide.md  agentic-memory-architecture.md  agents-md-integration-block.md  ai-workos-vault-merge-evaluation.md  benchmark-kit.md  command-reference.md  compliance-implementation-plan.md  compliance-roadmap.md  critique-derived-addons-roadmap.md  cross-platform-lean-setup.md  cross-project-hub-kit.md  dashboard-extension-plan.md  decision-trace-kit.md  distribution.md  enterprise-context-benchmark-kit.md  feedback-round-2026-06.md  finalization-report.md  global-user-knowledge-layer.md  harness-plugin-matrix.md  html-reports.md  ideation-workflow.md  incremental-index-finalization-sprint.md  incremental-index-workflow.md  install-plugin.md  integration-decision-guide.md  launch-readiness.md  lightrag-neo4j-qdrant-setup.md  mvp-plan-example.md  okf-integration-plan.md  operational-hardening.md  owledge-vs-agent-methods.md  performance-scale-notes.md  pi-agent-red-team-evaluation-plan.md  pi-agent-setup.md  power-user-objections.md  project-folder-only-quickstart.md  project-snapshot-kit.md  publishing.md  (+11 more)
docs/archive/: PROJECT_CONTEXT.md  PROJECT_CONTEXT.template.md  README.md  ai-workos-vault-adapter-plan.md  compliance-implementation-plan.md  compliance-roadmap.md  finalization-report.md  incremental-index-finalization-sprint.md  pi-agent-adapter-plan.md  pi-agent-global-intelligence-plan.md  pi-agent-red-team-evaluation-plan.md  publishing.md  review-workflow-finalization-sprint.md
docs/extensions/: windows-powershell.md
examples/: README.md
examples/demo-vault/: Handoff Seed.md  Product Idea.md  Research Note.md
internal/: README.md  migration-baseline-doctor.json  migration-file-list.txt
owledge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
owlib/: README.md  pyproject.toml
owlib/src/owlib/: __init__.py  cli.py  core.py  modules.py  pi.py  quality.py  skills.py
owlib/tests/: test_owlib.py
plugins/agent-memory-cowork/: CHANGELOG.md  LICENSE  README.md
plugins/owledge-cowork/: LICENSE  README.md
plugins/pi-agent-workspace/: README.md
skills/agent-memory-runtime-bridge/: SKILL.md
skills/bootstrap-agent-memory/: SKILL.md
skills/bootstrap-owledge/: SKILL.md
skills/concept-blindspot-audit/: SKILL.md
skills/owledge-integration-adapters/: SKILL.md
skills/owledge-planning-layer/: SKILL.md
skills/owledge-principles/: SKILL.md
skills/owledge-runtime-bridge/: SKILL.md
skills/personal-pi-agent/: SKILL.md
skills/pi-agent-global-intelligence/: SKILL.md
skills/pi-agent-red-team-evaluator/: SKILL.md
skills/pi-agent-workspace-quality/: SKILL.md
skills/render-memory-report/: SKILL.md
skills/review-evaluation-workflow/: SKILL.md
standalone-skills/: README.md  manifest.json
standalone-skills/owledge-agentic-review/: SKILL.md
standalone-skills/owledge-blindspot-audit/: SKILL.md
standalone-skills/owledge-brainstorm/: SKILL.md
standalone-skills/owledge-planning-layer/: SKILL.md
templates/agent-memory/: README.md
tools/: __init__.py  agent_memory_cli.py  bootstrap-agent-memory.ps1  build-memory-index.ps1  build-memory-index.sh  build-project-folder-kit.ps1  build-project-folder-kit.sh  build_kb_module.py  build_project_folder_kit.py  capture-idea.ps1  ci_preflight.py  compact-sessions.ps1  eval-memory-retrieval.ps1  export-rag-documents.ps1  find-parallels.ps1  init-agent-memory.ps1  memory-doctor.sh  owledge.py  owledge_core.py  owledge_mcp.py  pi-agent-check.ps1  render-memory-report.ps1  report-agent-memory-metrics.ps1  run-finalization-gates.ps1  run-memory-evals.ps1  run-redteam-qa.ps1  run-review-workflow.ps1  scan-memory-sensitive-data.ps1  test-agent-memory-contracts.ps1  test-agent-memory-principles-scenarios.ps1  test-agent-memory-principles-skill.ps1  test-kb-module.ps1  test-runtime-adapters.ps1  validate-memory.sh
(+1524 files in other folders)
