[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "owledge"
version = "0.6.1"
description = "Markdown-first durable memory for AI agents, existing repos, and knowledgebases."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Owledge maintainers" }
]
keywords = [
  "agent-memory",
  "ai-agents",
  "markdown",
  "codex",
  "claude-code",
  "knowledge-base"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup :: Markdown"
]

[project.urls]
Documentation = "https://github.com/elmokirk/owledge/tree/main/docs"
Issues = "https://github.com/elmokirk/owledge/issues"
Source = "https://github.com/elmokirk/owledge"

[project.scripts]
owledge = "tools.owledge:main"

[tool.setuptools]
packages = ["tools"]
py-modules = []
include-package-data = true

[tool.setuptools.package-data]
tools = ["*.py"]

# Ship root files + templates/ + skills/ alongside the package so that
# ``owledge init-project`` works from a pip-installed package.
# ``install-addon`` and ``build-project-kit`` that need addons/ or plugins/
# require a source checkout — documented in README Install section.
[tool.setuptools.data-files]
"." = [
    "PROJECT_CONTEXT.template.md",
    "AGENTS.template.md",
    "CLAUDE.template.md",
    "USER_CONTEXT.template.md",
    "DESIGN.md",
    "REPORT_DESIGN_SELECTOR.html",
    "VERSION",
]
"templates/agent-memory" = ["templates/agent-memory/README.md"]
"templates/agent-memory/schemas" = ["templates/agent-memory/schemas/*.json"]
"templates/agent-memory/templates" = ["templates/agent-memory/templates/*.md", "templates/agent-memory/templates/*.json"]
"templates/agent-memory/canonical" = ["templates/agent-memory/canonical/.gitkeep"]
"templates/agent-memory/compiled" = ["templates/agent-memory/compiled/.gitkeep"]
"templates/agent-memory/decisions" = ["templates/agent-memory/decisions/.gitkeep"]
"templates/agent-memory/evidence" = ["templates/agent-memory/evidence/.gitkeep"]
"templates/agent-memory/evidence/promotions" = ["templates/agent-memory/evidence/promotions/.gitkeep"]
"templates/agent-memory/exports/graphrag" = ["templates/agent-memory/exports/graphrag/.gitkeep"]
"templates/agent-memory/exports/lightrag" = ["templates/agent-memory/exports/lightrag/.gitkeep"]
"templates/agent-memory/exports/rag" = ["templates/agent-memory/exports/rag/.gitkeep"]
"templates/agent-memory/handoffs" = ["templates/agent-memory/handoffs/.gitkeep"]
"templates/agent-memory/ideas" = ["templates/agent-memory/ideas/.gitkeep"]
"templates/agent-memory/indexes" = ["templates/agent-memory/indexes/.gitkeep"]
"templates/agent-memory/lessons" = ["templates/agent-memory/lessons/.gitkeep"]
"templates/agent-memory/patterns" = ["templates/agent-memory/patterns/.gitkeep"]
"templates/agent-memory/plans" = ["templates/agent-memory/plans/.gitkeep"]
"templates/agent-memory/sessions" = ["templates/agent-memory/sessions/.gitkeep"]
"templates/agent-memory/pi-agent/concepts" = ["templates/agent-memory/pi-agent/concepts/.gitkeep"]
"templates/agent-memory/pi-agent/evaluations" = ["templates/agent-memory/pi-agent/evaluations/.gitkeep"]
"templates/agent-memory/pi-agent/indexes" = ["templates/agent-memory/pi-agent/indexes/.gitkeep"]
"templates/agent-memory/pi-agent/parallels" = ["templates/agent-memory/pi-agent/parallels/.gitkeep"]
"templates/agent-memory/pi-agent/recurring-errors" = ["templates/agent-memory/pi-agent/recurring-errors/.gitkeep"]
"templates/agent-memory/pi-agent/red-team" = ["templates/agent-memory/pi-agent/red-team/.gitkeep"]
"templates/agent-memory/pi-agent/reports" = ["templates/agent-memory/pi-agent/reports/.gitkeep"]
"templates/agent-memory/pi-agent/scorecards" = ["templates/agent-memory/pi-agent/scorecards/.gitkeep"]
"templates/agent-memory/pi-agent/trends" = ["templates/agent-memory/pi-agent/trends/.gitkeep"]
"skills/agent-memory-principles" = ["skills/agent-memory-principles/*.md"]
"skills/agent-memory-principles/references" = ["skills/agent-memory-principles/references/*.md"]
"skills/agent-memory-runtime-bridge" = ["skills/agent-memory-runtime-bridge/*.md"]
"skills/review-evaluation-workflow" = ["skills/review-evaluation-workflow/*.md"]
"skills/render-memory-report" = ["skills/render-memory-report/*.md"]
"skills/render-memory-report/references" = ["skills/render-memory-report/references/*.md"]
"skills/owledge-planning-layer" = ["skills/owledge-planning-layer/*.md"]
"skills/owledge-planning-layer/references" = ["skills/owledge-planning-layer/references/*.md"]
"skills/concept-blindspot-audit" = ["skills/concept-blindspot-audit/*.md"]
"skills/concept-blindspot-audit/references" = ["skills/concept-blindspot-audit/references/*.md"]
