[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "owledge"
version = "0.7.0"
description = "Markdown-first durable memory for AI agents, existing repos, and knowledgebases."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Owledge maintainers" }
]
keywords = [
  "owledge",
  "ai-agents",
  "markdown",
  "codex",
  "claude-code",
  "knowledge-base"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup :: Markdown"
]

[project.urls]
Documentation = "https://github.com/elmokirk/owledge/tree/main/docs"
Issues = "https://github.com/elmokirk/owledge/issues"
Source = "https://github.com/elmokirk/owledge"

[project.scripts]
owledge = "tools.owledge:main"

[tool.setuptools]
packages = ["tools"]
py-modules = []
include-package-data = true

[tool.setuptools.package-data]
tools = ["*.py"]

# Ship root files + templates/ + skills/ alongside the package so that
# ``owledge init-project`` works from a pip-installed package.
# ``install-addon`` and ``build-project-kit`` that need addons/ or plugins/
# require a source checkout — documented in README Install section.
[tool.setuptools.data-files]
"." = [
    "OWLEDGE.template.md",
    "AGENTS.template.md",
    "CLAUDE.template.md",
    "USER_CONTEXT.template.md",
    "DESIGN.md",
    "REPORT_DESIGN_SELECTOR.html",
    ".gitignore",
    "VERSION",
]
"templates/owledge" = ["templates/owledge/README.md"]
"templates/owledge/schemas" = ["templates/owledge/schemas/*.json"]
"templates/owledge/templates" = ["templates/owledge/templates/*.md", "templates/owledge/templates/*.json"]
"templates/owledge/context" = ["templates/owledge/context/.gitkeep"]
"templates/owledge/canonical" = ["templates/owledge/canonical/.gitkeep"]
"templates/owledge/compiled" = ["templates/owledge/compiled/.gitkeep"]
"templates/owledge/decisions" = ["templates/owledge/decisions/.gitkeep"]
"templates/owledge/evidence" = ["templates/owledge/evidence/.gitkeep"]
"templates/owledge/evidence/promotions" = ["templates/owledge/evidence/promotions/.gitkeep"]
"templates/owledge/exports/graphrag" = ["templates/owledge/exports/graphrag/.gitkeep"]
"templates/owledge/exports/lightrag" = ["templates/owledge/exports/lightrag/.gitkeep"]
"templates/owledge/exports/rag" = ["templates/owledge/exports/rag/.gitkeep"]
"templates/owledge/handoffs" = ["templates/owledge/handoffs/.gitkeep"]
"templates/owledge/ideas" = ["templates/owledge/ideas/.gitkeep"]
"templates/owledge/indexes" = ["templates/owledge/indexes/.gitkeep"]
"templates/owledge/lessons" = ["templates/owledge/lessons/.gitkeep"]
"templates/owledge/patterns" = ["templates/owledge/patterns/.gitkeep"]
"templates/owledge/plans" = ["templates/owledge/plans/.gitkeep"]
"templates/owledge/tasks" = ["templates/owledge/tasks/.gitkeep"]
"templates/owledge/workpackages" = ["templates/owledge/workpackages/.gitkeep"]
"templates/owledge/reviews" = ["templates/owledge/reviews/.gitkeep"]
"templates/owledge/audiences" = ["templates/owledge/audiences/.gitkeep"]
"templates/owledge/research" = ["templates/owledge/research/.gitkeep"]
"templates/owledge/research/briefs" = ["templates/owledge/research/briefs/.gitkeep"]
"templates/owledge/research/sources" = ["templates/owledge/research/sources/.gitkeep"]
"templates/owledge/research/findings" = ["templates/owledge/research/findings/.gitkeep"]
"templates/owledge/research/syntheses" = ["templates/owledge/research/syntheses/.gitkeep"]
"templates/owledge/research/lanes" = ["templates/owledge/research/lanes/.gitkeep"]
"templates/owledge/reports/generated" = ["templates/owledge/reports/generated/.gitkeep"]
"templates/owledge/tmp" = ["templates/owledge/tmp/.gitkeep"]
"templates/owledge/cache" = ["templates/owledge/cache/.gitkeep"]
"templates/owledge/sessions" = ["templates/owledge/sessions/.gitkeep"]
"templates/owledge/pi-agent/concepts" = ["templates/owledge/pi-agent/concepts/.gitkeep"]
"templates/owledge/pi-agent/evaluations" = ["templates/owledge/pi-agent/evaluations/.gitkeep"]
"templates/owledge/pi-agent/indexes" = ["templates/owledge/pi-agent/indexes/.gitkeep"]
"templates/owledge/pi-agent/parallels" = ["templates/owledge/pi-agent/parallels/.gitkeep"]
"templates/owledge/pi-agent/recurring-errors" = ["templates/owledge/pi-agent/recurring-errors/.gitkeep"]
"templates/owledge/pi-agent/red-team" = ["templates/owledge/pi-agent/red-team/.gitkeep"]
"templates/owledge/pi-agent/reports" = ["templates/owledge/pi-agent/reports/.gitkeep"]
"templates/owledge/pi-agent/scorecards" = ["templates/owledge/pi-agent/scorecards/.gitkeep"]
"templates/owledge/pi-agent/trends" = ["templates/owledge/pi-agent/trends/.gitkeep"]
"skills/owledge-principles" = ["skills/owledge-principles/*.md"]
"skills/owledge-principles/references" = ["skills/owledge-principles/references/*.md"]
"skills/owledge-runtime-bridge" = ["skills/owledge-runtime-bridge/*.md"]
"skills/review-evaluation-workflow" = ["skills/review-evaluation-workflow/*.md"]
"skills/render-memory-report" = ["skills/render-memory-report/*.md"]
"skills/render-memory-report/references" = ["skills/render-memory-report/references/*.md"]
"skills/owledge-planning-layer" = ["skills/owledge-planning-layer/*.md"]
"skills/owledge-planning-layer/references" = ["skills/owledge-planning-layer/references/*.md"]
"skills/owledge-brainstorm" = ["skills/owledge-brainstorm/*.md"]
"skills/concept-blindspot-audit" = ["skills/concept-blindspot-audit/*.md"]
"skills/concept-blindspot-audit/references" = ["skills/concept-blindspot-audit/references/*.md"]
"standalone-skills" = ["standalone-skills/README.md", "standalone-skills/manifest.json"]
"standalone-skills/owledge-agentic-review" = ["standalone-skills/owledge-agentic-review/*.md"]
"standalone-skills/owledge-agentic-review/agents" = ["standalone-skills/owledge-agentic-review/agents/*.yaml"]
"standalone-skills/owledge-blindspot-audit" = ["standalone-skills/owledge-blindspot-audit/*.md"]
"standalone-skills/owledge-blindspot-audit/references" = ["standalone-skills/owledge-blindspot-audit/references/*.md", "standalone-skills/owledge-blindspot-audit/references/*.json"]
"standalone-skills/owledge-brainstorm" = ["standalone-skills/owledge-brainstorm/*.md"]
"standalone-skills/owledge-planning-layer" = ["standalone-skills/owledge-planning-layer/*.md"]
"standalone-skills/owledge-planning-layer/references" = ["standalone-skills/owledge-planning-layer/references/*.md"]
