[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "owlib"
version = "0.1.0"
description = "Standalone local knowledge hub for Owledge-compatible project memory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Owledge" }]
keywords = ["ai-agents", "knowledgebase", "memory", "markdown", "pi-agent"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[project.scripts]
owlib = "owlib.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
owlib = ["data/**/*.md", "data/**/*.json"]

